Vezba2: on lower screen sizes the shape is no longer visible

--- a/001_pripreme_css/Vezba2/styles/style.scss
+++ b/001_pripreme_css/Vezba2/styles/style.scss
@@ -191,6 +191,10 @@ body {
 					font-size: 34px;
 				}
 			}
+
+			.shape {
+				display: none;
+			}
 		}
 
 		.bottomContainer {
